--- a/src/lib/Timeline.scss
+++ b/src/lib/Timeline.scss
@@ -56,7 +56,7 @@ $weekend: rgba(250, 246, 225, 0.5);
       cursor: pointer;
 
       background: $item-background;
-      border: $item-border;
+      border: 0;
       z-index: 80;
 
       &.clipped-left {
